@@ -1,5 +1,5 @@
 (fn object? (x)
   (is_object x))
 
-(fn simple-object? (x)
+(fn json-object? (x)
   (is_a x "stdClass"))
